crates/bsql/tests/compile_fail/type_mismatch_bool_for_text.stderr
error: type mismatch for parameter `$login`: declared `bool` but PostgreSQL expects `text` (OID 25) (expected `String`)
 --> tests/compile_fail/type_mismatch_bool_for_text.rs:4:13
  |
4 |       let _ = bsql::query!(
  |  _____________^
5 | |         "SELECT id FROM users WHERE login = $login: bool"
6 | |     );
  | |_____^
  |
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
